# mapseq-processing

./: .gitignore  LICENSE  NOTES.txt  README.md  REPORT.txt  pyproject.toml  setup.py  softenv.sh  softenv.txt
attic/: process_fastq_thread.py  snippets.py
etc/: M001_sampleinfo.xlsx  mapseq.conf  mapseq.nextseq.conf  mapseq.novaseq.conf  novaseq_all.txt  novaseq_p3.txt  qc_report_template.md  splitter.conf  ssi_v2.txt.new  user_report_inj_template.md  user_report_inj_template2.md  user_report_metadata.yaml  user_report_noinj_template.md  user_report_template.md  utils.conf  v1mapseq.conf
mapseq/: __init__.py  barcode.py  bowtie.py  calibration.py  cli.py  collapse.py  core.py  plotting.py  stats.py  ultraplex.py  utils.py
matlab/: normBCmat.m  produceBCmat.m
misc/: DEVNOTES.txt  barcode_splitter.py  get_elzar_project.sh  get_zelk_project.sh  ipythonsnippet.txt  make_barseq_readtable.py  mapseq_graph.py  runall.sh
notebooks/: .gitignore  BARseqIntegration.ipynb  MAPSeq Thresholds.ipynb  MAPseq Analysis.ipynb  MAPseq Processing.ipynb  MAPseqHTNA2025.ipynb  MAPseqProcessing.ipynb  MAPseqQC.ipynb  Virus Library Analysis.ipynb  stats.202410171459.json
scripts/: aggregate_reads.py  aggregate_reads_byfile.py  align_collapse.py  align_collapse_df.py  align_collapse_nx.py  align_collapse_split.py  align_colllapse.py  calc_false_positive.py  calc_qcstats.py  calc_seqstats.py  calc_template_switching.py  calculate_thresholds.py  calib_qpcr_cycles.py  calib_viruslib_blacklist.py  cfg_qpcr_cycles.py  dump_matlab.py  extract_fastq_pairs.py  filter_counts_fasta.py  filter_fields.py  filter_reads.py  filter_reads_byfilessi.py  filter_sequences.py  filter_split.py  filter_vbctable.py  make_countsdfs.py  make_countsplots.py  make_heatmaps.py  make_matrices.py  make_read_reports.py  make_readplots.py  make_readtable.py  make_report.py  make_samplereports.py  make_umi_reports.py  make_vbc_params_report.py  make_vbctable.py  mapseq_graph.py  merge-areas.py  merge-targets.py  merge_mapseq_dataframes.py  (+38 more)
test/: m205_pp8nt1.sh  (+3 more)
(+57 files in other folders)
