[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mapseq-processing"
version = "1.0.0"

description = "Data processing for MAPseq"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
authors = [
  { name="John Hover", email="hover@cshl.edu" },
]

requires-python = ">= 3.9"

dependencies = [
 	"pandas", 
 	"pyarrow", 
 	"numpy", 
 	"scikit-learn", 
 	"matplotlib", 
 	"seaborn", 
 	"biopython", 
 	"scipy", 
 	"fastcluster", 
 	"openpyxl", 
 	"bowtie",
 	"bowtie2", 
 	"natsort", 
 	"paramiko", 
 	"h5py", 
 	"dask", 
 	"networkx", 
 	"mergedeep",
]

[tool.setuptools.packages.find]
include = ["mapseq*"]

[project.scripts]
process_fastq_pairs = "mapseq.cli:process_fastq_pairs" 


[project.urls]
Homepage = "https://github.com/ZadorLaboratory/mapseq-processing"
Issues = "https://github.com/ZadorLaboratory/mapseq-processing/issues"